# OnlinePlanning

./: CMakeLists.txt  PlanePlantAni.m  PlanePlantIntegrator.m  PlaneVisualizer.m  SBachPlant.m  SBachPlant_world.m  SBachPlant_world_vels.m  cmake_install.cmake  debugOP_speed.m  flyThroughHoop.m  navigateForest.m  simpleCollisionCheck.m  testSimpleEnvironments.m
Forests_test/: forest1.mat  forest2.mat  forest3.mat  forest4.mat  forest5.mat
FunnelLibrary/: createFunnelLibrary.m  runFunnel.m  sampledFiniteTimeReach.m  sampledFiniteTimeReach_B0.m  sampledFiniteTimeReach_B0_robust.m  saveProjS.m  symmetrizeFunnelLibrary.m  testLibrarySymmetry.m
OnlinePlanner/: CMakeCache.txt  CMakeLists.txt  Makefile  OnlinePlanner.m  OnlinePlannerExp.m  OnlinePlannerMex.m  SingleFunnelControlExp.m  cmake_install.cmake  collisionCheckDebug.m  collisionCheckEllipse.m  debugEllipsoidProjection.m  isCollisionFree_mex.mexa64  ptToPolyBullet_mex.mexa64  replanFunnels_mex.cpp  replanFunnels_mex.mexa64
OnlinePlanner/OldStuff/: cvxsolve.m  ptToPolyDist.cpp
OnlinePlanner/OldStuff/cvxgen/: Makefile  csolve.c  csolve.m  csolve.mexa64  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
OnlinePlanner/resolveCollision/: CMakeLists.txt  Makefile  checkResolveCollision.m  cmake_install.cmake  funnel10_shift.mexa64  funnel11_shift.mexa64  funnel12_shift.mexa64  funnel13_shift.mexa64  funnel14_shift.mexa64  funnel15_shift.mexa64  funnel16_shift.mexa64  funnel17_shift.mexa64  funnel18_shift.mexa64  funnel19_shift.mexa64  funnel1_shift.mexa64  funnel20_shift.mexa64  funnel21_shift.mexa64  funnel22_shift.mexa64  funnel23_shift.mexa64  funnel24_shift.mexa64  funnel25_shift.mexa64  funnel26_shift.mexa64  funnel27_shift.mexa64  funnel28_shift.mexa64  funnel29_shift.mexa64  funnel2_shift.mexa64  funnel30_shift.mexa64  funnel31_shift.mexa64  funnel32_shift.mexa64  funnel33_shift.mexa64  funnel34_shift.mexa64  funnel35_shift.mexa64  funnel36_shift.mexa64  funnel37_shift.mexa64  funnel38_shift.mexa64  funnel39_shift.mexa64  funnel3_shift.mexa64  funnel40_shift.mexa64  funnel4_shift.mexa64  funnel5_shift.mexa64  (+11 more)
OnlinePlanner/resolveCollision/tests/: testQCQP_vs_snopt.m  testResolveCollision_qcqp_poles.m  testResolveCollision_qcqp_random.m
OnlinePlanner/resolveCollision_snopt/: CMakeLists.txt  Makefile  cmake_install.cmake  collisionConstraint.m  collisionConstraintFmincon.m  collisionConstraintMex.cpp  collisionConstraintMex.mexa64  shiftFunnel_snopt_mex.mexa64  snoptDummyFun.m  snoptWrapperFun.m  testTime.m
OnlinePlanner/resolveCollision_snopt/tests/: testCollisionConstraint.m  testSnoptShifting.m
OnlinePlanner/tests/: testPlanner.m  testPlanner_vs_qcqp.m  testPlanner_vs_snopt.m
PoissonForest/: defineObstacles.m  hoopObs.mat  poissonForestCylinders.m  poissonForestFixed.m  poissonForestPolytopes.m
TrajectoryLibrary/: cost.m  createTrajLibrary.m  finalcost.m  trajLibrary.mat  trajLibraryArtificial.mat
Visualization/: SBachVisualizer.m  generate_terrain.m  generate_terrain_colors.m  plot_terrain.m
Visualization/funnelMovie/: funnelSphere.mat  getCameraTraj.m  makeFunnelAndPlaneMovie.m  makeFunnelImage.m  makeFunnelMovie.m  plotCamTraj.m  plotSphereImage.m  superImposeFunnel.m  testCheckerProjection.m  testFunnelPlot.m  testSBachTracking.m
Visualization/funnelMovie/goProCalibration/: calibrate_goPro.m  cameraParams_1080_120_N.mat
Visualization/funnelMovie/goProCalibration/calibrationPics/1080_120_N/: calib_data.mat
cmake/: mex.cmake
